<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_message_24"
        app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_sync_24"
        app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="syncStepsWeekly"
            app:summaryOff="@string/steps_summary_off"
            app:summaryOn="@string/steps_summary_on"
            app:title="@string/steps_title"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_notifications_24"
        app:title="Notifications">

        <SeekBarPreference
            app:key="volume_notifications"
            app:title="Volume"
            app:showSeekBarValue="true"
            app:defaultValue= "60" />

        <SwitchPreferenceCompat
            app:key="notifications"
            app:summaryOff="You will no longer receive any notifications"
            app:summaryOn="You will receive all notifications"
            app:title="Enable notifications"
            app:defaultValue="true"/>
    </PreferenceCategory>


</PreferenceScreen>